[gd_scene load_steps=2 format=3 uid="uid://tm5cinokhjg2"]

[ext_resource type="Script" uid="uid://dnwl6wmvaiiks" path="res://Scripts/mainmenureal.gd" id="1_qwnig"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwnig")

[node name="LABEL_title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -41.0
offset_right = 143.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "WETCORP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -120.0
offset_right = 82.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_group_ = true

[node name="BTN_start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="BTN_credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="BTN_quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/BTN_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/BTN_credits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/BTN_quit" to="." method="_on_btn_quit_pressed"]
